kubernetes/apps/observability/kromgo/app/service.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/core/service_v1.json
apiVersion: v1
kind: Service
metadata:
  name: kromgo
  namespace: observability
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
    - name: health
      port: 8080
      targetPort: 8080
      protocol: TCP
